--- a/F103StepDriver4.ioc
+++ b/F103StepDriver4.ioc
@@ -23,18 +23,19 @@ Mcu.Pin1=PA2
 Mcu.Pin10=PB10
 Mcu.Pin11=PB11
 Mcu.Pin12=PA10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=VP_RTC_VS_RTC_Activate
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM1_VS_OPM
-Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=PA11
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=VP_RTC_VS_RTC_Activate
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM1_VS_OPM
 Mcu.Pin2=PA3
-Mcu.Pin20=VP_TIM2_VS_OPM
-Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM3_VS_OPM
-Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM2_VS_OPM
+Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM3_VS_OPM
+Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
@@ -42,7 +43,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB2
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -72,6 +73,11 @@ PA10.GPIO_Label=BUTTON
 PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
 PA10.Signal=GPIO_Input
+PA11.GPIOParameters=PinState,GPIO_Label
+PA11.GPIO_Label=MARKER
+PA11.Locked=true
+PA11.PinState=GPIO_PIN_RESET
+PA11.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
