--- a/F103StepDriver4.ioc
+++ b/F103StepDriver4.ioc
@@ -7,15 +7,16 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6TR
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=RTC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IPNb=8
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=RTC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA1
@@ -26,16 +27,18 @@ Mcu.Pin12=PA10
 Mcu.Pin13=PA11
 Mcu.Pin14=PA13
 Mcu.Pin15=PA14
-Mcu.Pin16=VP_RTC_VS_RTC_Activate
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM1_VS_OPM
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_RTC_VS_RTC_Activate
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PA3
-Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM2_VS_OPM
-Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM3_VS_OPM
-Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM1_VS_OPM
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM2_VS_OPM
+Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM3_VS_OPM
+Mcu.Pin26=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
@@ -43,7 +46,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB2
-Mcu.PinsNb=25
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -53,6 +56,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -126,6 +131,10 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=CH3DIR
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
