--- a/F103StepDriver4.ioc
+++ b/F103StepDriver4.ioc
@@ -4,6 +4,8 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=OwnAddress
+I2C1.OwnAddress=1
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6TR
 Mcu.Family=STM32F1
@@ -21,8 +23,8 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
+Mcu.Pin10=PB11
+Mcu.Pin11=PB12
 Mcu.Pin12=PA10
 Mcu.Pin13=PA11
 Mcu.Pin14=PA13
@@ -45,7 +47,7 @@ Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
-Mcu.Pin9=PB2
+Mcu.Pin9=PB10
 Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -120,17 +122,17 @@ PB1.GPIO_Label=CH2EN
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=CH3CLK
+PB10.GPIO_Label=CH3DIR
 PB10.Locked=true
 PB10.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=CH3EN
+PB11.GPIO_Label=CH3CLK
 PB11.Locked=true
 PB11.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=CH3DIR
-PB2.Locked=true
-PB2.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=CH3EN
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -167,7 +169,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
