--- a/F103StepDriver4.ioc
+++ b/F103StepDriver4.ioc
@@ -25,30 +25,34 @@ Mcu.Pin0=PA1
 Mcu.Pin1=PA2
 Mcu.Pin10=PB11
 Mcu.Pin11=PB12
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_RTC_VS_RTC_Activate
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PA8
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PA3
-Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM1_VS_OPM
-Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM2_VS_OPM
-Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin25=VP_TIM3_VS_OPM
-Mcu.Pin26=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=VP_RTC_VS_RTC_Activate
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM1_VS_OPM
+Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM2_VS_OPM
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM3_VS_OPM
 Mcu.Pin3=PA4
+Mcu.Pin30=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB10
-Mcu.PinsNb=27
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -113,6 +117,11 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=CH2DIR
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA8.GPIO_Label=ID3
+PA8.GPIO_PuPd=GPIO_PULLDOWN
+PA8.Locked=true
+PA8.Signal=GPIO_Input
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=CH2CLK
 PB0.Locked=true
@@ -133,6 +142,21 @@ PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=CH3EN
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB13.GPIO_Label=ID0
+PB13.GPIO_PuPd=GPIO_PULLDOWN
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB14.GPIO_Label=ID1
+PB14.GPIO_PuPd=GPIO_PULLDOWN
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB15.GPIO_Label=ID2
+PB15.GPIO_PuPd=GPIO_PULLDOWN
+PB15.Locked=true
+PB15.Signal=GPIO_Input
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
